fixed flickering issue at navigational bar during small scorll steps

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ table {
 
 
 
-
+/*---------------------------------Light/Dark presets-----------------------------------*/
 :root.dark{
     --color-base-bg:rgb(29, 28, 28);
     --color-border-btn:1px solid white;
@@ -68,6 +68,9 @@ table {
     --color-base-text: rgb(0, 0, 0);
 }
 
+
+
+/*---------------------------------Banner above navBar-----------------------------------*/
 :root{
     background:rgb(29, 28, 28);
     
@@ -96,6 +99,7 @@ table {
 }
 
 .welcome{
+    text-align:center;
     position: relative;
     top:-80px;
     display: flex;
@@ -105,10 +109,9 @@ table {
     height:30vh;
     width:90vw;
     color:white;
-    font-size:70px;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
-    
-    
+    font-size:45px;
+    font-family: 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-shadow: 3px 5px 2px #333333b2, 6px 5px 12px rgb(184, 184, 184);
 }
 
 .search{
@@ -123,7 +126,7 @@ table {
 }
 
 
-
+/*---------------------------------NavBar-----------------------------------*/
 .navBar-initial { /*Navigation Bar*/ 
     box-sizing: border-box;
     Display:flex;
@@ -141,7 +144,7 @@ table {
     background-image: linear-gradient(to bottom, rgba(218, 204, 7, 0.747), rgba(190, 141, 5, 0.829)40%);
     Height: 45px;
     width:100vw;
-    transition:0.5s;
+
 }
 
 .navBar-up { /*Navigation Bar*/ 
@@ -161,7 +164,7 @@ table {
     background-image: linear-gradient(to bottom, rgba(218, 204, 7,1), rgba(190, 141, 5, 1)40%);
     Height: 40px;
     width:100vw;
-    transition:0.5s;
+    transition:height 0.5s;
 }
 
 
@@ -181,7 +184,7 @@ table {
     background-image: linear-gradient(to bottom, rgb(218, 203, 7), rgb(221, 162, 0)40%);
     Height: 30px;
     width:100vw;
-    transition:0.5s;
+    transition:height 0.5s;
 }
 
 
@@ -259,3 +262,10 @@ transition: 0.3s;
 }
 
 /*end of navBar*/
+
+/*---------------------------------Home-----------------------------------*/
+.home{
+    border: 5px solid red;
+    width: 100vw;
+    height: 100vh;
+}
